--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ html{
 }
 
 .container-header{
-    background: #020202;
+    background: green;
     position: fixed;
     width: 100%;
     top: 0;
@@ -28,6 +28,145 @@ html{
 .container-header header .logo a{
     font-family: 'Righteonus';
     font-size: 36px;
-    color: #1cb698;
+    color: aliceblue;
     text-decoration: none;
 }
+.container-header header ul{
+    display: flex;
+    list-style: none;
+}
+.container-header header nav ul li a{
+    text-align: none;
+    color: aliceblue;
+    margin: 0 15px;
+    padding: 3px;
+    transition: .5s;
+    text-decoration: none;
+}
+.container-header header nav ul li a:hover{
+    color: aliceblue;
+}
+.nav-responsive{
+    background-color: green;
+    color: aliceblue;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.nav-responsive{
+    background-color:green;
+    color: aliceblue;
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    display: none;
+}
+.inicio{
+   background: linear-gradient(to top,rgba(245, 248, 245, 0.8),(green)),url(/img/cris.jpeg) no-repeat center center;
+   background-size:  cover;
+   height: 100vh;
+   color: black;
+   display: flex;
+   align-items: center;
+}
+.inicio .container-banner{
+    padding: 20px;
+    background-color: green;
+    max-width: 350px;
+    margin: auto;
+    text-align: center;
+    border-radius: 40px;
+}
+.inicio .container-banner img{
+    margin-top: 40px;
+    border: 10px solid green;
+    display: block;
+    width: 80%;
+    margin: auto;
+    border-radius: 100%;
+}
+.inicio .container-banner h1{
+    margin-top: 40px;
+    font-size: 42px;
+    font-family: 'Righteous';
+}
+.inicio.container-banner h2{
+    font-size: 15px;
+    font-weight: normal;
+}
+.inicio .container-banner .redes a{
+    color: black;
+    display: inline-block;
+    text-decoration: none;
+    border: 1px solid black;
+    border-radius: 100%;
+    width: 42px;
+    height: 42px;
+    line-height: 42px;
+    margin: 40px 5px;
+    font-size: 20px;
+    transition: .3s;
+}
+.inicio .container-banner .redes a:hover{
+    background-color: green;
+}
+.Sobremi{
+    background-color: black;
+    color:aliceblue;
+    padding: 50px 20px;
+}
+.Sobremi .container-section{
+    max-width: 1100px;
+    margin: auto;
+}
+.Sobremi h2{
+    font-size: 48px;
+      font-family: 'Righteous';
+      text-align: center;
+      padding: 20px 0;
+}
+.Sobremi .container-sectionp{
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 20px;
+}
+.Sobremi .container-section p span{
+    color:aquamarine;
+    font-weight: bold;
+}
+.Sobremi .fila{
+    display: flex;
+}
+.Sobremi .fila .col{
+    width: 50%;
+}
+.Sobremi .fila .col h3{
+    font-size: 28px;
+    font-family: 'Righteous';
+    margin-bottom: 25px;
+}
+.Sobremi .fila .col ul{
+    list-style: none;
+}
+.Sobremi .fila .col ul li{
+    margin: 12px 0;
+}
+.Sobremi .fila .col ul li strong{
+    display: inline-block;
+    color: aquamarine;
+    width: 130px;
+}
+.Sobremi .fila .col ul li span{
+    background-color: aquamarine;
+    padding: 3px;
+    font-weight: bold;
+    border-radius: 5px;
+}
+.Sobremi .fila .col .container-intereses{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+
+
