--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 *{
     box-sizing: border-box;
-    font-family: 'work Sans';
+    font-family: 'Work Sans';
     margin: 0;
     padding: 0;
 }
@@ -10,7 +10,7 @@ html{
 }
 
 .container-header{
-    background: green;
+    background: #1e2326;
     position: fixed;
     width: 100%;
     top: 0;
@@ -26,9 +26,9 @@ html{
     padding: 15px 20px;
 }
 .container-header header .logo a{
-    font-family: 'Righteonus';
+    font-family: 'Righteous';
     font-size: 36px;
-    color: aliceblue;
+    color: #1cb698;
     text-decoration: none;
 }
 .container-header header ul{
@@ -37,41 +37,42 @@ html{
 }
 .container-header header nav ul li a{
     text-align: none;
-    color: aliceblue;
+    color: #fff;
     margin: 0 15px;
     padding: 3px;
     transition: .5s;
     text-decoration: none;
 }
 .container-header header nav ul li a:hover{
-    color: aliceblue;
+    color: #1cb698;
 }
 .nav-responsive{
-    background-color: green;
-    color: aliceblue;
+    background-color:#1cb698;
+    color: #fff;
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
 }
 .nav-responsive{
-    background-color:green;
-    color: aliceblue;
+    background-color:#1cb698;
+    color: #fff;
     padding: 5px 10px;
     border-radius: 5px;
     cursor: pointer;
     display: none;
 }
+/*Section Inicio */
 .inicio{
-   background: linear-gradient(to top,rgba(245, 248, 245, 0.8),(green)),url(/img/cris.jpeg) no-repeat center center;
+   background: linear-gradient(to top,rgba(30,35,38,.8),rgb(30,35,38,1)),url(/img/sindi.jpeg) no-repeat center center;
    background-size:  cover;
    height: 100vh;
-   color: black;
+   color: #fff;
    display: flex;
    align-items: center;
 }
 .inicio .container-banner{
     padding: 20px;
-    background-color: green;
+    background-color: #1e2326;
     max-width: 350px;
     margin: auto;
     text-align: center;
@@ -79,7 +80,7 @@ html{
 }
 .inicio .container-banner img{
     margin-top: 40px;
-    border: 10px solid green;
+    border: 10px solid #1cb698;
     display: block;
     width: 80%;
     margin: auto;
@@ -95,10 +96,10 @@ html{
     font-weight: normal;
 }
 .inicio .container-banner .redes a{
-    color: black;
+    color: #fff;
     display: inline-block;
     text-decoration: none;
-    border: 1px solid black;
+    border: 1px solid #fff;
     border-radius: 100%;
     width: 42px;
     height: 42px;
@@ -108,64 +109,354 @@ html{
     transition: .3s;
 }
 .inicio .container-banner .redes a:hover{
-    background-color: green;
+    background-color: #1cb698;
 }
-.Sobremi{
-    background-color: black;
-    color:aliceblue;
+/* Section Sobre MI*/
+.sobremi{
+    background-color: #1e2326;
+    color:#fff;
     padding: 50px 20px;
 }
-.Sobremi .container-section{
+.sobremi .container-section{
     max-width: 1100px;
     margin: auto;
 }
-.Sobremi h2{
+.sobremi h2{
     font-size: 48px;
       font-family: 'Righteous';
       text-align: center;
       padding: 20px 0;
 }
-.Sobremi .container-sectionp{
+.sobremi .container-section p{
     font-size: 18px;
     line-height: 22px;
     margin-bottom: 20px;
 }
-.Sobremi .container-section p span{
-    color:aquamarine;
+.sobremi .container-section p span{
+    color:#1cb698;
     font-weight: bold;
 }
-.Sobremi .fila{
+.sobremi .fila{
     display: flex;
 }
-.Sobremi .fila .col{
+.sobremi .fila .col{
     width: 50%;
 }
-.Sobremi .fila .col h3{
+.sobremi .fila .col h3{
     font-size: 28px;
     font-family: 'Righteous';
     margin-bottom: 25px;
 }
-.Sobremi .fila .col ul{
+.sobremi .fila .col ul{
     list-style: none;
 }
-.Sobremi .fila .col ul li{
+.sobremi .fila .col ul li{
     margin: 12px 0;
 }
-.Sobremi .fila .col ul li strong{
+.sobremi .fila .col ul li strong{
     display: inline-block;
-    color: aquamarine;
+    color: #1cb698;
     width: 130px;
 }
-.Sobremi .fila .col ul li span{
-    background-color: blue;
+.sobremi .fila .col ul li span{
+    background-color:#1cb698;
     padding: 3px;
     font-weight: bold;
     border-radius: 5px;
 }
-.Sobremi .fila .col .container-intereses{
+.sobremi .fila .col .container-intereses{
     display: flex;
     flex-wrap: wrap;
 }
+.sobremi .fila .col .container-intereses .interes{
+    width: 100px;
+    height: 100px;
+    background-color: #252a2e;
+    border-radius: 10px;
+    margin: 0 15px 15px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+}
+.sobremi .fila .col .container-intereses .interes:hover{
+    background-color: #1cb698;
+}
+.sobremi .fila .col .container-intereses .interes i{
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+.sobremi button{
+    cursor: pointer;
+    background-color: transparent;
+    border: 2px solid #fff;
+    width: fit-content;
+    display: block;
+    margin: 20px auto;
+    padding: 10px 22px;
+    font-size: 16px;
+    color: #fff;
+    position: relative;
+    z-index: 10;
+}
+.sobremi button .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: #1cb698;
+    z-index: -1;
+    transition: 1s;
+}
+.sobremi button:hover .overlay{
+    width: 100%;
+}
+/* Section Skills */
+.skills{
+    background-color: #252a2e;
+    color: #fff;
+    padding: 50px 20px;
+}
+.skills .container-section{
+    max-width: 1100px;
+    margin: auto;
+}
+.skills h2{
+    font-size: 48px;
+        font-family: 'Righteous';
+        text-align: center;
+        padding: 20px 0;
+}
+.skills .fila{
+    display: flex;
+}
+.skills .fila .col{
+    width: 50%;
+    padding: 0 20px;
+}
+.skills .fila .col h3{
+    font-size: 28px;
+    font-family: 'Righteous';
+    margin-bottom: 25px;
+}
+.skills .skill > span{
+    font-weight: bold;
+    display: block;
+    margin-bottom: 10px;
+}
+.skills .skill .barra-skill{
+    height: 8px;
+    width: 80%;
+    background-color: #131517;
+    position: relative;
+    margin-bottom: 30px;
+}
+.skills .skill .progreso{
+    background-color: #1cb698;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 8px;
+}
+.skills .skill .barra-skill span{
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    background-color: #1cb698;
+    border-radius: 50px;
+    line-height: 40px;
+    text-align: center;
+    top: -17px;
+    right: -15px;
+    font-size: 14px;
+}
+.skills .skill .javascript{
+    width: 0%;
+    animation: 2s javascript forwards;
+}
+@keyframes javascript{
+    0%{width: 0%}
+    100%{width: 75%}
+}
+.skills .skill .htmlcss{
+    width: 0%;
+    animation: 2s htmlcss forwards;
+}
+@keyframes htmlcss{
+    0%{width: 0%;}
+    100%{width: 89%;}
+}
+.skills .skill .photoshop{
+    width: 0%;
+    animation: 2s photoshop forwards;
+}
+@keyframes photoshop{
+    0%{width: 0%;}
+    100%{width: 90%;}
+}
+.skills .skill .wordpress{
+    width: 0%;
+    animation: 2s wordpress forwards;
+}
+@keyframes wordpress{
+    0%{width: 0%;}
+    100%{width: 80%;}
+}
+.skills .skill .react{
+    width: 0%;
+    animation: 2s react forwards;
+}
+@keyframes react{
+    0%{width: 0%;}
+    100%{width: 70%;}
+}
+.skills .skill .comunicacion{
+    width: 0%;
+    animation: 2s comunicacion forwards;
+}
+@keyframes comunicacion{
+    0%{width: 0%;}
+    100%{width: 85%;}
+}
+.skills .skill .equipo{
+    width: 0%;
+    animation: 2s equipo forwards;
+}
+@keyframes equipo{
+    0%{width: 0%;}
+    100%{width: 90%;}
+}
+.skills .skill .creatividad{
+    width: 0%;
+    animation: 2s creatividad forwards;
+}
+@keyframes creatividad{
+    0%{width: 0%;}
+    100%{width: 99%;}
+}
+.skills .skill .dedicacion{
+    width: 0%;
+    animation: 2s dedicacion forwards;
+}
+@keyframes dedicacion{
+    0%{width: 0%;}
+    100%{width: 80%;}
+}
+/* Section Curriculum */
+.curriculum{
+    background-color: #1e2326;
+    color: #fff;
+    padding: 50px 20px;
+}
+.curriculum .container-section{
+    max-width: 1100px;
+    margin: auto;
+}
+.curriculum h2{
+    font-size: 48px;
+    font-family: 'Righteous';
+    text-align: center;
+    padding: 20px 0;
+}
+.curriculum .fila{
+    display: flex;
+}
+.curriculum .fila .col{
+    width: 49%;
+    padding: 0 20px;
+}
+.curriculum .fila .col h3{
+    font-size: 28px;
+    font-family: 'Righteous';
+    margin-bottom: 25px;
+}
+.curriculum .fila .izquierda{
+    border-right: 2px solid #252a2e;
+}
+.curriculum .fila .derecha{
+    border-left: 2px solid #252a2e;
+}
+.curriculum .fila .item{
+    padding: 25px;
+    margin-bottom: 30px;
+    background-color: #252a2e;
+    position: relative;
+}
+.curriculum .fila .item h4{
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.curriculum .fila .item .casa{
+    color: #1cb698;
+    font-size: 22px;
+    font-weight: bold;
+    display: block;
+}
+.curriculum .fila .item .fecha{
+    display: block;
+    color: #1cb698;
+    margin-bottom: 10px;
+}
+.curriculum .fila .item p{
+    line-height: 24px;
+}
+.curriculum .fila .izq{
+    border-right: 2px solid #1cb698;
+    margin-right: 20px;
+}
+.curriculum .fila .der{
+    border-left: 2px solid #1cb698;
+    margin-left: 20px;
+}
+.curriculum .fila .item .conectori{
+    height: 2px;
+    background-color: #1cb698;
+    width: 47px;
+    position: absolute;
+    top: 50%;
+    right: -47px;
+    z-index: 5;
+}
+.curriculum .fila .item .conectori .circuloi{
+    display: block;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background-color: #1cb698;
+    float: right;
+    position: relative;
+    bottom: 4px;
+}
+.curriculum .fila .item .conectord{
+    height: 2px;
+    background-color: #1cb698;
+    width: 47px;
+    position: absolute;
+    top: 50%;
+    left: -47px;
+    z-index: 5;
+}
+.curriculum .fila .item .conectord .circulod{
+    display: block;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background-color: #1cb698;
+    float: left;
+    position: relative;
+    bottom: 4px;
+}
+.curriculum .fila{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+
+
 
 
 
